# hexagonal-order-management

./: .gitignore  main.py  pyproject.toml
DI/: container.py
application/: dtos.py  services.py
application/services/: order_service.py  product_service.py  user_service.py
core/entities/: order.py  product.py  user.py
core/ports/repositories/: order_repository_port.py  product_repository_port.py  user_repository_port.py
domain/: models.py  ports.py
infrastructure/: adapters.py  models.py
infrastructure/adapters/repositories/: order_repository_impl.py  product_repository_impl.py  user_repository_impl.py
infrastructure/persistence/: adapters.py  models.py
infrastructure/persistence/sql/: init_db.py  session.py
infrastructure/persistence/sql/models/: order_model.py  product_model.py  user_model.py
