[project]
name = "hexagonal-order-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dependency-injector==4.48.2",
    "pydantic==2.12.3",
    "sqlalchemy==2.0.44",

]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
]

[tool.isort]
py_version=39
skip = [".gitignore", ".dockerignore", ".venv"]
extend_skip = [".md", ".json"]